CD convertido a objeto, lista para las canciones cds, capacidad para identificar canciones duplicadas

--- a/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica.vcxproj.filters
+++ b/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica.vcxproj.filters
@@ -18,5 +18,25 @@
     <ClCompile Include="JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Lectura.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="CD.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Canciones.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Lectura.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="CD.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Canciones.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
