--- a/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica.vcxproj
+++ b/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica/JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica.vcxproj
@@ -140,7 +140,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Canciones.cpp" />
+    <ClCompile Include="CD.cpp" />
     <ClCompile Include="JLDRL-1247723-ASPC-1135323-PRO1-ReproductordeMusica.cpp" />
+    <ClCompile Include="Lectura.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Canciones.h" />
+    <ClInclude Include="CD.h" />
+    <ClInclude Include="Lectura.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
